--- a/.github/workflows/WF-release.yml
+++ b/.github/workflows/WF-release.yml
@@ -14,62 +14,28 @@ on:
         type: string
         default: 'temurin'
         description: 'Java distribution to use for the job'
-      wf-maven-settings-xml-server-id:
+      maven-settings-xml-server-id:
         required: false
         type: string
         default: 'central'
         description: 'Used to generate server ID in generated maven settings XML to upload artifacts'
-      wf-maven-cmd-customization:
+      maven-cmd-customization:
         required: false
         type: string
         default: ''
         description: 'Customize Maven command for release commands'
-      wf-gpg-key-id:
-        required: false
-        type: string
-        default: ${{ secrets.TECHUSER_GPG_KEY_ID }}
-        description: 'GPG key ID for git commands'
-      wf-gpg-private-key:
-        required: false
-        type: string
-        default: ${{ secrets.TECHUSER_GPG_PRIVATE_KEY }}
-        description: 'GPG private key for signing commits'
-      wf-gpg-key-passphrase:
-        required: false
-        type: string
-        default: ''
-        description: 'GPG key passphrase for signing commits and artifacts'
-      wf-ssh-private-key:
-        required: false
-        type: string
-        default: ${{ secrets.TECHUSER_SSH_PRIVATE_KEY }}
-        description: 'SSH private key for git commands'
-      wf-git-username:
-        required: false
-        type: string
-        default: ${{ secrets.TECHUSER_USERNAME }}
-        description: 'Git username for git commands'
-      wf-git-email:
-        required: false
-        type: string
-        default: ${{ secrets.TECHUSER_EMAIL }}
-        description: 'Git email for git commands'
-      wf-github-token:
-        required: false
-        type: string
-        default: ${{ secrets.TECHUSER_GH_TOKEN }}
-        description: 'GitHub token for github API commands'
-      wf-maven-central-username:
-        required: false
-        type: string
-        default: ${{ secrets.MAVEN_CENTRAL_USER_USERNAME }}
-        description: 'Maven Central username for publishing artifacts'
-      wf-maven-central-password:
-        required: false
-        type: string
-        default: ${{ secrets.MAVEN_CENTRAL_USER_PASSWORD }}
-        description: 'Maven Central password for publishing artifacts'
 
+# Prerequisites for variables:
+# Set secrets in the repository or organization settings:
+# - TECHUSER_GPG_KEY_ID: GPG key ID for git commands
+# - TECHUSER_GPG_PRIVATE_KEY: GPG private key for signing commits
+# - TECHUSER_GPG_KEY_PASSPHRASE: GPG key passphrase
+# - TECHUSER_SSH_PRIVATE_KEY: SSH private key for git commands
+# - TECHUSER_USERNAME: Git username for git commands
+# - TECHUSER_EMAIL: Git email for git commands
+# - TECHUSER_GH_TOKEN: GitHub token for GitHub API commands
+# - MAVEN_CENTRAL_USER_USERNAME: Maven Central username for publishing artifacts
+# - MAVEN_CENTRAL_USER_PASSWORD: Maven Central password for publishing artifacts
 jobs:
   deploy-snapshot:
 
@@ -86,17 +52,17 @@ jobs:
           echo "github.workspace: '${{ github.workspace }}'"
           echo "java-version: '${{ inputs.java-version }}'"
           echo "java-distribution: '${{ inputs.java-distribution }}'"
-          echo "wf-maven-settings-xml-server-id: '${{ inputs.wf-maven-settings-xml-server-id }}'"
-          echo "wf-maven-cmd-customization: '${{ inputs.wf-maven-cmd-customization }}'"
-          echo "wf-gpg-key-id: '${{ inputs.wf-gpg-key-id }}'"
-          echo "wf-gpg-private-key: '${{ inputs.wf-gpg-private-key }}'"
-          echo "wf-gpg-key-passphrase: '${{ inputs.wf-gpg-key-passphrase }}'"
-          echo "wf-ssh-private-key: '${{ inputs.wf-ssh-private-key }}'"
-          echo "wf-git-username: '${{ inputs.wf-git-username }}'"
-          echo "wf-git-email: '${{ inputs.wf-git-email }}'"
-          echo "wf-github-token: '${{ inputs.wf-github-token }}'"
-          echo "wf-maven-central-username: '${{ inputs.wf-maven-central-username }}'"
-          echo "wf-maven-central-password: '${{ inputs.wf-maven-central-password }}'"
+          echo "maven-settings-xml-server-id: '${{ inputs.maven-settings-xml-server-id }}'"
+          echo "maven-cmd-customization: '${{ inputs.maven-cmd-customization }}'"
+          echo "secrets.TECHUSER_GPG_KEY_ID: '${{ secrets.TECHUSER_GPG_KEY_ID }}'"
+          echo "secrets.TECHUSER_GPG_PRIVATE_KEY: '${{ secrets.TECHUSER_GPG_PRIVATE_KEY }}'"
+          echo "secrets.TECHUSER_GPG_KEY_PASSPHRASE: '${{ secrets.TECHUSER_GPG_KEY_PASSPHRASE }}'"
+          echo "secrets.TECHUSER_SSH_PRIVATE_KEY: '${{ secrets.TECHUSER_SSH_PRIVATE_KEY }}'"
+          echo "secrets.TECHUSER_USERNAME: '${{ secrets.TECHUSER_USERNAME }}'"
+          echo "secrets.TECHUSER_EMAIL: '${{ secrets.TECHUSER_EMAIL }}'"
+          echo "secrets.TECHUSER_GH_TOKEN: '${{ secrets.TECHUSER_GH_TOKEN }}'"
+          echo "secrets.MAVEN_CENTRAL_USER_USERNAME: '${{ secrets.MAVEN_CENTRAL_USER_USERNAME }}'"
+          echo "secrets.MAVEN_CENTRAL_USER_PASSWORD: '${{ secrets.MAVEN_CENTRAL_USER_PASSWORD }}'"
 
       - name: Check branch (workflow can run only main/master branch)
         id: precheck
@@ -121,15 +87,15 @@ jobs:
     #     shell: bash
     #     # GPG private key, which is exported with armor (start with: '-----BEGIN PGP PRIVATE KEY BLOCK-----') and it is encoded with base64, and stored in secrets
     #     # the private key is decoded with base64 and it is imported
-    #     # run: echo "${{ inputs.wf-gpg-private-key }}" | base64 --decode | gpg --batch --import
+    #     # run: echo "${{ secrets.TECHUSER_GPG_PRIVATE_KEY }}" | base64 --decode | gpg --batch --import
     #     # GPG private key, which is exported with armor (start with: '-----BEGIN PGP PRIVATE KEY BLOCK-----') and stored in secrets
-    #     run: echo "${{ inputs.wf-gpg-private-key }}" | gpg --batch --import
+    #     run: echo "${{ secrets.TECHUSER_GPG_PRIVATE_KEY }}" | gpg --batch --import
 
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
           # Private SSH key in PEM format (start with: '-----BEGIN RSA PRIVATE KEY-----')
-          key: ${{ inputs.wf-ssh-private-key }}
+          key: ${{ secrets.TECHUSER_SSH_PRIVATE_KEY }}
           name: id_rsa
           known_hosts: unnecessary
 
@@ -139,42 +105,42 @@ jobs:
         with:
           java-version: ${{ inputs.java-version }}
           distribution: ${{ inputs.java-distribution }}
-          server-id: ${{ inputs.wf-maven-settings-xml-server-id }}
+          server-id: ${{ inputs.maven-settings-xml-server-id }}
           # Environment variable name for the username for authentication to the Apache Maven repository. Default is GITHUB_ACTOR.
           server-username: MAVEN_USERNAME
           # Environment variable name for password or token for authentication to the Apache Maven repository. Default is GITHUB_TOKEN.
           server-password: MAVEN_PASSWORD
           #   settings-path: ${{ github.workspace }} # location for the settings.xml file
-          gpg-private-key: ${{ secrets.wf-gpg-private-key }}
+          gpg-private-key: ${{ secrets.TECHUSER_GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
           cache: 'maven'
 
       - name: Configure GIT for signed commit
         shell: bash
         run: |
-          git config --global user.name "${{ inputs.wf-git-username }}"
-          git config --global user.email "${{ inputs.wf-git-email }}"
-          git config --global user.signingkey "${{ inputs.wf-gpg-key-id }}"
+          git config --global user.name "${{ secrets.TECHUSER_USERNAME }}"
+          git config --global user.email "${{ secrets.TECHUSER_EMAIL }}"
+          git config --global user.signingkey "${{ secrets.TECHUSER_GPG_KEY_ID }}"
           git config --global commit.gpgsign true
           git config --global tag.gpgSign true
 
       - name: Checkout ${{ github.ref_name }}
         uses: actions/checkout@v4
         with:
-          token: ${{ inputs.wf-github-token }}
+          token: ${{ secrets.TECHUSER_GH_TOKEN }}
           ref: ${{ github.ref_name }}
 
       - name: Maven release prepare DryRun and release branch
         id: prepare
         shell: bash
         run: |
-          mvn -B ${{ inputs.wf-maven-cmd-customization }} release:prepare -DdryRun=true
+          mvn -B ${{ inputs.maven-cmd-customization }} release:prepare -DdryRun=true
           if [[ "${{ steps.precheck.outputs.VERSION_TYPE }}" == "MINOR" ]]; then
             SCM_TAG=`cat release.properties | grep -w "scm.tag" | cut -d'=' -f2`
             echo "SCM_TAG=${SCM_TAG}" 
             echo "SCM_TAG=${SCM_TAG}" >> $GITHUB_OUTPUT
           fi
-          mvn -B ${{ inputs.wf-maven-cmd-customization }} release:clean --file pom.xml
+          mvn -B ${{ inputs.maven-cmd-customization }} release:clean --file pom.xml
           if [[ "${{ steps.precheck.outputs.VERSION_TYPE }}" == "MINOR" ]]; then
             RELEASE_BRANCH_NAME=release/${SCM_TAG%.*}.x
             echo "RELEASE_BRANCH_NAME=${RELEASE_BRANCH_NAME}"
@@ -198,29 +164,29 @@ jobs:
         if: ${{ steps.precheck.outputs.VERSION_TYPE == 'MINOR' }}
         uses: actions/checkout@v4
         with:
-          token: ${{ inputs.wf-github-token }}
+          token: ${{ secrets.TECHUSER_GH_TOKEN }}
           ref: ${{ steps.prepare.outputs.RELEASE_BRANCH_NAME }}
 
       - name: Maven release PREPARE
         shell: bash
         run: |
-            mvn -B ${{ inputs.wf-maven-cmd-customization }} release:prepare -Dgpg.keyname=${{ inputs.wf-gpg-key-id }}
+            mvn -B ${{ inputs.maven-cmd-customization }} release:prepare -Dgpg.keyname=${{ secrets.TECHUSER_GPG_KEY_ID }}
         env:
-          MAVEN_GPG_PASSPHRASE: ${{ inputs.wf-gpg-key-passphrase }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.TECHUSER_GPG_KEY_PASSPHRASE }}
 
       - name: Maven release PERFORM
         shell: bash
-        run: mvn -B ${{ inputs.wf-maven-cmd-customization }} release:perform -Dgpg.keyname=${{ inputs.wf-gpg-key-id }}
+        run: mvn -B ${{ inputs.maven-cmd-customization }} release:perform -Dgpg.keyname=${{ secrets.TECHUSER_GPG_KEY_ID }}
         env:
-          MAVEN_USERNAME: ${{ inputs.wf-maven-central-username }}
-          MAVEN_PASSWORD: '${{ inputs.wf-maven-central-password }}'
-          MAVEN_GPG_PASSPHRASE: ${{ inputs.wf-gpg-key-passphrase }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USER_USERNAME }}
+          MAVEN_PASSWORD: '${{ secrets.MAVEN_CENTRAL_USER_PASSWORD }}'
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.TECHUSER_GPG_KEY_PASSPHRASE }}
 
       - name: Checkout main/master
         if: ${{ steps.precheck.outputs.VERSION_TYPE == 'MINOR' }}
         uses: actions/checkout@v4
         with:
-          token: ${{ inputs.wf-github-token }}
+          token: ${{ secrets.TECHUSER_GH_TOKEN }}
           ref: ${{ github.ref_name }}
 
       - name: Create bump version branch
@@ -236,7 +202,7 @@ jobs:
         if: ${{ steps.precheck.outputs.VERSION_TYPE == 'MINOR' }}
         uses: actions/checkout@v4
         with:
-          token: ${{ inputs.wf-github-token }}
+          token: ${{ secrets.TECHUSER_GH_TOKEN }}
           ref: ${{ steps.prepare.outputs.MR_BRANCH_NAME }}
 
       - name: Create bump MINOR version branch
@@ -260,6 +226,6 @@ jobs:
         if: ${{ steps.precheck.outputs.VERSION_TYPE == 'MINOR' }}
         shell: bash
         env:
-          GH_TOKEN: ${{ inputs.wf-github-token }}
+          GH_TOKEN: ${{ secrets.TECHUSER_GH_TOKEN }}
         run: |
           gh pr create --base ${{ github.ref_name }} --fill-verbose --title '${{steps.bumpbranch.outputs.COMMIT_MESSAGE}}'
