--- a/.github/workflows/WF-release.yml
+++ b/.github/workflows/WF-release.yml
@@ -169,17 +169,17 @@ jobs:
       - name: Maven release PREPARE
         shell: bash
         run: |
-            mvn -B ${{ inputs.maven-cmd-customization }} release:prepare -Dgpg.keyname=${{ secrets.TECHUSER_GPG_KEY_ID }}
+            mvn -B ${{ inputs.maven-cmd-customization }} release:prepare
         env:
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.TECHUSER_GPG_KEY_PASSPHRASE }}
+          MAVEN_GPG_PASSPHRASE: '${{ secrets.TECHUSER_GPG_KEY_PASSPHRASE }}'
 
       - name: Maven release PERFORM
         shell: bash
-        run: mvn -B ${{ inputs.maven-cmd-customization }} release:perform -Dgpg.keyname=${{ secrets.TECHUSER_GPG_KEY_ID }}
+        run: mvn -B ${{ inputs.maven-cmd-customization }} release:perform
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USER_USERNAME }}
           MAVEN_PASSWORD: '${{ secrets.MAVEN_CENTRAL_USER_PASSWORD }}'
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.TECHUSER_GPG_KEY_PASSPHRASE }}
+          MAVEN_GPG_PASSPHRASE: '${{ secrets.TECHUSER_GPG_KEY_PASSPHRASE }}'
 
       - name: Checkout main/master
         if: ${{ steps.precheck.outputs.VERSION_TYPE == 'MINOR' }}
