--- a/oss/pom.xml
+++ b/oss/pom.xml
@@ -9,8 +9,10 @@
         <version>0.3.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>hu.gov.nav.pom</groupId>
     <artifactId>oss</artifactId>
+    <packaging>pom</packaging>
+
+    <name>Nav internal parent pom</name>
 
     <properties>
         <project.scm.id>nav-github-server</project.scm.id>
