--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>hu.gov.nav.pom</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>0.3.0</version>
+        <version>0.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>nav</artifactId>
