--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - 'releases/**'
+      - 'release/**'
   pull_request:
     branches-ignore:
       - 'gh-pages'
